나는바보멍충이다

--- a/homework/4thweek_hw_re/templates/index.html
+++ b/homework/4thweek_hw_re/templates/index.html
@@ -334,7 +334,7 @@
             </div>
 
             <div class="button">
-                <button type="button" class="btn btn-primary btn-lg" onclick="order()">주문하기</button>
+                <button type="button" class="btn btn-primary btn-lg" onclick="make_order()">주문하기</button>
             </div>
 
             <div class="orders">
